Fixed select zooming on Iphones

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,8 @@
   text-align: center;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus, textarea:focus, input:focus, input:active {
+          font-size: 13px;
+      }
+  }
